--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
     <section id="gallery" class="gallery-section">
         <div class="section-header">
-          <h2 class="section-title">Before & After Gallery</h2>
+          <h2 class="section-title">Our Gallery</h2>
           <div class="section-line"></div>
           <p class="section-subtitle">Visual transformations by our expert mechanics</p>
         </div>
@@ -782,7 +782,7 @@
                         </div>
                         <div class="info-content">
                             <h3>Our Location</h3>
-                            <p>222 North Street, Romford, Essex, RM6 5QJ, United Kingdom</p>
+                            <p>55 Brentwood Rd, Hornchurch, Romford RM1 2EU, United Kingdom</p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -793,7 +793,7 @@
                         </div>
                         <div class="info-content">
                             <h3>Phone Number</h3>
-                            <p>+44 1708 728900</p>
+                            <p>+44 1708 736555</p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -933,7 +933,7 @@
                     </a>
                 </div>
                 <div class="copyright">
-                    <p>&copy; 2023 Romford Auto Services. All rights reserved.</p>
+                    <p>&copy; 2025 Romford Auto Services. All rights reserved.</p>
                     <p>
                         <a href="#">Privacy Policy</a> | 
                         <a href="#">Terms of Service</a>
