--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="achievements">
                     <div class="achievement-item">
-                        <div class="achievement-number" data-count="35">0</div>
+                        <div class="achievement-number" data-count="35"></div>
                         <div class="achievement-label">Years of Experience</div>
                     </div>
                     <div class="achievement-item">
@@ -93,7 +93,7 @@
                         <div class="achievement-label">Cars Repaired</div>
                     </div>
                     <div class="achievement-item">
-                        <div class="achievement-number" data-count="100">0</div>
+                        <div class="achievement-number" data-count="99">0</div>
                         <div class="achievement-label">% Customer Satisfaction</div>
                     </div>
                     <div class="achievement-item">
