--- a/index.html
+++ b/index.html
@@ -398,20 +398,20 @@
       
         <div class="gallery-grid">
           <div class="gallery-item">
-            <img src="https://images.pexels.com/photos/1545743/pexels-photo-1545743.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Before car service">
-            <div class="caption">Before Service</div>
+            <img src="https://t3.ftcdn.net/jpg/03/34/10/26/240_F_334102614_OVPEyRdr7URQf6moBq0tN06KXLtVsOu7.jpg" alt="Before car service">
+            <div class="caption">Mot Check</div>
           </div>
           <div class="gallery-item">
-            <img src="https://images.unsplash.com/photo-1637947112765-81c025c67c10?q=80&w=1530&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="After car service">
-            <div class="caption">After Service</div>
+            <img src="https://images.unsplash.com/photo-1666009387246-65e8ad8e7103?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2FyJTIwcGFpbnR8ZW58MHx8MHx8fDA%3D" alt="After car service">
+            <div class="caption">Spray Image</div>
           </div>
           <div class="gallery-item">
-            <img src="https://images.unsplash.com/photo-1552656967-7a0991a13906?w=500&auto=format&fit=crop&q=80" alt="Engine detail">
-            <div class="caption">Engine Work</div>
+            <img src="https://images.unsplash.com/photo-1599082267768-4815b2ea6bd2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dGlyZSUyMHJlcGFpcnxlbnwwfHwwfHx8MA%3D%3D" alt="Engine detail">
+            <div class="caption">Tyre Image</div>
           </div>
           <div class="gallery-item">
-            <img src="https://plus.unsplash.com/premium_photo-1694670121843-79b433c4ed59?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8d2hlZWwlMjBhbGlnbm1lbnR8ZW58MHx8MHx8fDA%3D" alt="Wheel alignment">
-            <div class="caption">Wheel Alignment</div>
+            <img src="https://images.pexels.com/photos/13065692/pexels-photo-13065692.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Wheel alignment">
+            <div class="caption">Engine Diagonistics</div>
           </div>
         </div>
       </section>
@@ -829,7 +829,7 @@
             <div class="news-grid">
                 <div class="news-item">
                     <div class="news-date">
-                        <span class="day">05</span>
+                        <span class="day">11</span>
                         <span class="month">May</span>
                         <span class="year">2025</span>
                     </div>
@@ -844,7 +844,7 @@
                 </div>
                 <div class="news-item">
                     <div class="news-date">
-                        <span class="day">06</span>
+                        <span class="day">12</span>
                         <span class="month">Jul</span>
                         <span class="year">2025</span>
                     </div>
