--- a/index.html
+++ b/index.html
@@ -403,11 +403,11 @@
           </div>
           <div class="gallery-item">
             <img src="https://images.unsplash.com/photo-1666009387246-65e8ad8e7103?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2FyJTIwcGFpbnR8ZW58MHx8MHx8fDA%3D" alt="After car service">
-            <div class="caption">Spray Image</div>
+            <div class="caption">Car Spray</div>
           </div>
           <div class="gallery-item">
             <img src="https://images.unsplash.com/photo-1599082267768-4815b2ea6bd2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dGlyZSUyMHJlcGFpcnxlbnwwfHwwfHx8MA%3D%3D" alt="Engine detail">
-            <div class="caption">Tyre Image</div>
+            <div class="caption">Tyre Fixing</div>
           </div>
           <div class="gallery-item">
             <img src="https://images.pexels.com/photos/13065692/pexels-photo-13065692.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Wheel alignment">
